Refactor build workflow to use Yarn and improve steps
Updated build workflow to use Yarn instead of npm, modified dependency fixing steps, and added checks for electron-builder configuration.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,6 @@ jobs:
         submodules: recursive
         fetch-depth: 0
 
-    # Required for node-gyp to build native modules
     - name: Setup Python 3.11
       uses: actions/setup-python@v5
       with:
@@ -37,61 +36,44 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        cache-dependency-path: '**/package-lock.json'
+        cache: 'yarn' 
+        # Changed to 'yarn' because VS Code forks require yarn.lock
 
-    # Install system libraries for Linux
     - name: Install Linux Dependencies
       if: runner.os == 'Linux'
       run: |
         sudo apt-get update
         sudo apt-get install -y build-essential libx11-dev libxkbfile-dev libsecret-1-dev libkrb5-dev libgtk-3-dev libxss-dev libasound2-dev
 
-    - name: Fix Dependencies (Critical Step)
+    - name: Setup Yarn and Fix Dependencies
       shell: bash
       run: |
-        echo "🔧 Applying critical dependency fixes..."
-        
-        # 1. Force node-addon-api to v7.1.0. 
-        # Newer versions (v8+) crash builds on Electron 27.
-        npm pkg set overrides.node-addon-api="7.1.0"
-        
-        # 2. DELETE package-lock.json. 
-        # This is required so npm ignores the old locked version and uses the override.
-        rm -rf package-lock.json node_modules
-        
-        # 3. Clean cache
-        npm cache clean --force
+        echo "🔧 Installing Yarn..."
+        npm install -g yarn
+
+        echo "🔧 Injecting 'resolutions' to force node-addon-api v7.1.0..."
+        # We use a Node script to edit package.json because it works on Windows too.
+        # This fixes the C++ 'node_api_nogc_env' crash by forcing the older API version.
+        node -e "
+          const fs = require('fs');
+          const pkg = JSON.parse(fs.readFileSync('package.json', 'utf8'));
+          pkg.resolutions = { ...pkg.resolutions, 'node-addon-api': '7.1.0' };
+          fs.writeFileSync('package.json', JSON.stringify(pkg, null, 2));
+        "
 
     - name: Install Dependencies
       shell: bash
       env:
-        # Token is required to download 'ripgrep' binary on macOS
+        # Token needed for @vscode/ripgrep download on macOS
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         PYTHON: python
+        # Prevent node-gyp concurrency issues on Windows
+        CHILD_CONCURRENCY: 1
       run: |
-        echo "📦 Installing dependencies with overrides..."
-        npm install --no-fund --no-audit
-
-    - name: Ensure Electron Builder Config
-      shell: bash
-      run: |
-        # Check if ANY config exists (yml, json, js, cjs)
-        if [ -f "electron-builder.yml" ] || [ -f "electron-builder.yaml" ] || [ -f "electron-builder.json" ] || [ -f "electron-builder.config.js" ] || [ -f "electron-builder.config.cjs" ]; then
-           echo "✅ Found existing electron-builder configuration. Skipping creation."
-        else
-           echo "⚠️ No config found. Creating default electron-builder.config.cjs..."
-           echo 'module.exports = {
-            productName: "Prism Editor",
-            appId: "com.prism-editor.app",
-            directories: { output: "release" },
-            files: ["out/**/*", "dist/**/*", "package.json"],
-            win: { target: "nsis" },
-            mac: { target: "dmg", identity: null }, 
-            linux: { target: "AppImage" }
-          };' > electron-builder.config.cjs
-        fi
+        echo "📦 Installing with Yarn..."
+        # --frozen-lockfile=false allows Yarn to update the lockfile with our new resolution
+        yarn install --frozen-lockfile=false --network-timeout 100000
 
     - name: Compile Project
       shell: bash
@@ -99,13 +81,18 @@ jobs:
         NODE_OPTIONS: --max-old-space-size=8192
       run: |
         echo "🔨 Compiling..."
-        # We try compile, but if it fails we proceed to package 
-        # (packaging might handle build internally or use existing files)
-        if npm run compile --if-present; then
-          echo "✅ Compile successful"
-        else
-          echo "⚠️ Compile script failed or missing. Attempting to proceed to packaging..."
+        # Using yarn run compile ensures we use the environment set up by yarn
+        yarn run compile
+
+    - name: Verify Build
+      shell: bash
+      run: |
+        # Fail early if main.js wasn't created
+        if [ ! -f "out/main.js" ] && [ ! -d "out" ]; then
+          echo "❌ Error: Build failed to generate 'out/main.js'. Packaging will fail."
+          exit 1
         fi
+        echo "✅ Build verified, proceeding to package."
 
     - name: Package Application
       shell: bash
@@ -120,8 +107,13 @@ jobs:
 
         echo "🚀 Packaging for $RUNNER_OS..."
         
-        # Run builder
-        npx electron-builder build $FLAGS
+        # Check if we need to point to a specific config file
+        if [ -f "electron-builder.config.cjs" ]; then
+           npx electron-builder build $FLAGS --config electron-builder.config.cjs
+        else
+           # This uses your existing electron-builder.yml
+           npx electron-builder build $FLAGS
+        fi
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
